styles/style.less
/*!
    Starter by Merlin Mason
    License: The MIT License (MIT)
*/


//----------------------------------------------------------------------------//
//  Setup
//----------------------------------------------------------------------------//


@charset "UTF-8";
@import "reset.less";
@import "vars.less";
@import "helpers.less";
@import "fonts.less";
@import "grid.less";
@import "slider.less";

::-moz-selection {
    background:@color-highlight;
    color:#fff;
    text-shadow:none;
}
::selection {
    background:@color-highlight;
    color:#fff;
    text-shadow:none;
}

* { box-sizing:border-box; }
//.row { .make-row(); }
//.make-grid-columns();
//.make-grid(xs);
//@media (min-width: @screen-sm-min) { .make-grid(sm); }
//@media (min-width: @screen-md-min) { .make-grid(md); }
//@media (min-width: @screen-lg-min) { .make-grid(lg); }

body { background:#f0f0f0; }


//----------------------------------------------------------------------------//
//  Typography
//----------------------------------------------------------------------------//


body {
    font-family:@font-family-body;
    font-size:@font-size-base;
    line-height:@line-height-base;
    color:@color-text;
}

p { margin-bottom:@space; }

.heading {
    font-family:@font-family-heading;
    line-height:@line-height-base;
    font-weight:400;
    text-align:center;
    margin-bottom:@space;
    transition:opacity 0.1s;
}
.main-heading {
    &:extend(.heading);
    font-size:48px;
}
.sub-heading {
    &:extend(.heading);
    font-size:24px;
    text-transform:uppercase;
}
.meta-heading {
    &:extend(.heading);
    font-size:24px;
}
.smallprint {
    font-size:@font-size-mini;
}
.wf-loading {
    .heading,
    .main-heading,
    .sub-heading,
    .meta-heading,
    p { opacity:0; }
}
.wf-active,
.wf-inactive {
    .heading,
    .main-heading,
    .sub-heading,
    .meta-heading,
    p { opacity:1; }
}


//----------------------------------------------------------------------------//
//  Links
//----------------------------------------------------------------------------//


a:link,
a:visited {
    color:@color-link;
    border-bottom:2px solid @color-link;
    text-decoration:none;
    transition:all 0.2s ease-in;
}
a:hover,
a:focus,
a:active {
    color:@color-link-hover;
    border-color:@color-link-hover;
    text-decoration:none;
    outline:none;
}

a[href^="tel"] {
    color:inherit!important;
    border:none!important;
    cursor:text;
    white-space:nowrap;
}


//----------------------------------------------------------------------------//
//  Forms & Buttons
//----------------------------------------------------------------------------//


input[type='text'],
input[type='email'],
input[type='password'],
textarea {
    padding:(@space/2);
    border:none;
    .placeholder();
    &:hover {

    }
    &:focus {
        outline:none;
        // Define your own focus styles here
    }
}

.btn,
button,
input[type="submit"] {

    &:hover {

    }
    &:focus {

    }
}


//----------------------------------------------------------------------------//
//  Header
//----------------------------------------------------------------------------//


.page-header {
    margin:(@space*2) 0;
    .main-heading { margin:0; }
    .logo-wrap {
        width:300px;
        margin:@space auto;
        opacity:0;
        .force-hardware-acceleration();
        .no-svg & {
            height:106px;
            background:url(img/logo.png) no-repeat center center;
        }
    }
    .logo {
        height:106px;
        display:block;
    }
    @media (min-width: @screen-sm-min) { }
    @media (min-width: @screen-md-min) { }
    @media (min-width: @screen-lg-min) { }
}


//----------------------------------------------------------------------------//
//  Content
//----------------------------------------------------------------------------//

.section {
    padding:@space 0;
    &.case-studies { padding:0; } // allow individual case studies to give padding
    &.contact { padding-bottom:280px; } // allow section to scroll to top of viewport
    p {
        max-width:100%;
        margin-left:auto;
        margin-right:auto;
    }
    @media (min-width:@screen-md-min) {
        p { max-width:60%; }
    }
    @media (min-width:@screen-sm-min) {
        p { max-width:80%; }
    }
}

.case-study {
    padding:(@space*4) 0 (@space*3);
    .dates {
        display:block;
        font-size:18px;
        text-transform:uppercase;
    }
}

.social {
    text-align:center;
    a {
        display:inline-block;
        margin:0 (@space/2) @space;
        padding:@space;
        background:#ccc;
        color:#666;
        border-radius:50%;
        border:none;
        transition:all 0.2s ease-in;
        box-shadow:0 0 0 rgba(0,0,0,0), inset 0 0 0 rgba(0,0,0,0);
        &:hover {
            transform:translate(0, -3px);
            box-shadow:0 2px 2px rgba(0,0,0,0.3), inset 0 0 0 rgba(0,0,0,0);
        }
        &:active {
            transform:translate(0, 1px);
            box-shadow:0 0 0 rgba(0,0,0,0), inset 0 2px 2px rgba(0,0,0,0.3);
        }
        &.icon-mail:hover {
            background:#f0eee1;
            color:#e35044;
        }
        &.icon-twitter-1:hover {
            background:#55acee;
            color:#fff;
        }
        &.icon-linkedin:hover {
            background:#287bbc;
            color:#fff;
        }
        &.icon-github:hover {
            background:#111;
            color:#eee;
        }
    }
}


//----------------------------------------------------------------------------//
//  Footer
//----------------------------------------------------------------------------//


.page-footer {
    text-align:center;
    @media (min-width: @screen-sm-min) { }
    @media (min-width: @screen-md-min) { }
    @media (min-width: @screen-lg-min) { }
}

